...
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Новая игра"/>
                                        <connections>
                                            <segue destination="iwJ-Kz-lSt" kind="show" id="wHz-Zl-XlH"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Настройки"/>
                                        <connections>
                                            <segue destination="cYV-Ar-gwc" kind="show" id="D6D-pn-YDA"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Рекорд"/>
                                        <connections>
                                            <segue destination="XxD-YB-yC3" kind="presentation" id="YRU-gb-Tff"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Меню" id="GTa-CX-jeA"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1qb-2s-0gF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="hAi-v1-1wO" firstAttribute="bottom" secondItem="63z-H2-qt4" secondAttribute="bottom" constant="10" id="D1z-lu-mtT"/>
                            <constraint firstItem="63z-H2-qt4" firstAttribute="leading" secondItem="hAi-v1-1wO" secondAttribute="leading" constant="10" id="D3e-Fp-RSK"/>
                            <constraint firstItem="UIV-Ph-6sW" firstAttribute="top" secondItem="hAi-v1-1wO" secondAttribute="top" constant="20" id="NYt-4r-eV6"/>
                            <constraint firstItem="UIV-Ph-6sW" firstAttribute="centerX" secondItem="hAi-v1-1wO" secondAttribute="centerX" id="OjD-tM-tMM"/>
                            <constraint firstItem="hAi-v1-1wO" firstAttribute="trailing" secondItem="63z-H2-qt4" secondAttribute="trailing" constant="10" id="rSH-rc-i0J"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Таймер" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TdF-El-4uz">
                                                    <rect key="frame" x="20" y="11.333333333333336" width="299" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 сек" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qus-Z0-cig">
                                                    <rect key="frame" x="310.33333333333331" y="14" width="42" height="16"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
...
                                                    <rect key="frame" x="102" y="7" width="186" height="30"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" title="Настройки по умолчанию"/>
                                                    <connections>
                                                        <action selector="resetSettings:" destination="cYV-Ar-gwc" eventType="touchUpInside" id="m8s-er-Vke"/>
...
