...
    
    /// Обновить информациб об игре
    /// - Parameter status: Статус игры
    private func updateInfoGame(with status: StatusGame){
        switch status {
        case .start:
            statusGame.text = "Игра началась"
            statusGame.textColor = .black
        case .win:
            statusGame.text = "Вы выиграли"
            statusGame.textColor = .green
            if game.isNewRecord {
                showAlert()
...
